<?xml version="1.0" encoding="utf-8"?>
<!--
    Copyright (c) 2012 Busko Trust

    Licensed under the Apache License, Version 2.0 (the "License"); you may not
    use this file except in compliance with the License. You may obtain a copy of
    the License at

    http://www.apache.org/licenses/LICENSE-2.0

    Unless required by applicable law or agreed to in writing, software
    distributed under the License is distributed on an "AS IS" BASIS, WITHOUT
    WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied. See the
    License for the specific language governing permissions and limitations under
    the License.
-->
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              android:layout_width="fill_parent"
              android:layout_height="fill_parent"
              android:gravity="center_horizontal"
              android:orientation="vertical">
    <TextView
        android:layout_width="fill_parent"
        android:layout_height="25dip"
        android:gravity="center"
        android:text="@string/mainmenu_title"
        android:textAppearance="?android:attr/textAppearanceLarge"/>
    <TextView
        android:layout_width="fill_parent"
        android:layout_height="30dip"
        android:gravity="center"
        android:text="@string/recordroute_instruction1"/>
    <TextView
        android:layout_width="fill_parent"
        android:layout_height="50dip"
        android:gravity="center"
        android:text="@string/recordroute_instruction2"/>

    <EditText android:id="@+id/text_recordroute_routeNumber"
              android:layout_marginTop="10dip"
              android:layout_marginLeft="40dip"
              android:layout_marginRight="40dip"
              android:inputType="textNoSuggestions"
              android:hint="@string/recordroute_routeNumber_hint"
              android:layout_width="fill_parent"
              android:layout_height="50dip"/>

    <EditText android:id="@+id/text_recordroute_routeDescription"
              android:layout_marginTop="10dip"
              android:layout_marginLeft="40dip"
              android:layout_marginRight="40dip"
              android:inputType="textNoSuggestions"
              android:hint="@string/recordroute_routeDescription_hint"
              android:layout_width="fill_parent"
              android:layout_height="100dip"/>
    <Button android:id="@+id/button_recordroute_startrecording"
            android:layout_marginTop="10dip"
            android:layout_width="fill_parent"
            android:layout_height="75dip"
            android:layout_marginLeft="40dip"
            android:layout_marginRight="40dip"
            android:text="@string/recordroute_button_startrecording"/>
</LinearLayout>